--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.0.6",
+    "moment": "^2.29.1",
     "nodemon": "^2.0.12",
     "react": "^17.0.2",
     "webpack": "^5.46.0",
