--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "html-webpack-plugin": "^5.3.2",
